tdf#104707 ooxmlexport: support RawText

fix TODO: docxattributeoutput::RawText

The only time RawText is called is in OutEEField,
an EE_FEATURE_FIELD, which always seems to be a hyperlink.
So, even though it is a very generic sounding function,
it is barely used.

There are no other "make check" examples using this
RawText function, so "proof" documents are limited to the two
bug reports that this fixes.

Confirmed in Word 2003 that the URL is active after RT.
In LibreOffice, the url is not active on import...

Change-Id: I6c385057be18ca253ebb2f20454694850a6da41f
Reviewed-on: https://gerrit.libreoffice.org/47380
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>